--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.2.4"
   },
   "devDependencies": {
