--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react-icons": "^4.8.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.3",
+    "react-spinners": "^0.13.8",
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.2.4"
   },
