Updated blog page & answered required questions

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.5.2",
     "react-icons": "^4.8.0",
     "react-lazy-load": "^4.0.1",
+    "react-lazyload": "^3.2.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
