--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
+    "google-map-react": "^2.2.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
@@ -20,9 +21,11 @@
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.5.2",
+    "react-google-maps": "^7.3.0",
     "react-icons": "^4.8.0",
     "react-lazy-load": "^4.0.1",
     "react-lazyload": "^3.2.0",
+    "react-parallax-tilt": "^1.7.136",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
