--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-parallax-tilt": "^1.7.136",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
+    "react-slideshow-image": "^4.2.1",
     "react-spinners": "^0.13.8",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.4.8",
