--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
     "google-map-react": "^2.2.0",
+    "leaflet": "^1.9.3",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
@@ -25,6 +26,7 @@
     "react-icons": "^4.8.0",
     "react-lazy-load": "^4.0.1",
     "react-lazyload": "^3.2.0",
+    "react-leaflet": "^4.2.1",
     "react-parallax-tilt": "^1.7.136",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
