--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.7",
-    "swiper": "^9.2.4"
+    "swiper": "^9.2.4",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
