--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
     "google-map-react": "^2.2.0",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.3",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
